# spyderbot

./: CMakeLists.txt  README.md  package.xml
config/: controller_position.yaml
description/: gazebo_control.xacro  robot.urdf.xacro  robot_core_hr.xacro  robot_core_lr.xacro
launch/: angle_control.launch.py  launch_sim.launch.py  rsp.launch.py  rviz.launch.py
meshes/: base_link.STL  fl1_link.STL  fl2_link.STL  fl3_link.STL  fr1_link.STL  fr2_link.STL  fr3_link.STL  rl1_link.STL  rl2_link.STL  rl3_link.STL  rr1_link.STL  rr2_link.STL  rr3_link.STL
src/: angle_control.py  control.py  inverse_kinematic.py  movement.py  teleop.py  walk.py
worlds/: config.world
