<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spyderbot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hibatullah.mickysukmana@gmail.com">vel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
	<gazebo_ros gazebo_m0del_path = "/home/vel/ros2_ws/install/spyderbot/share"/>
  </export>
</package>
